# StartTime

./: .gitattributes  .gitignore  .overhaul-state.md  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  hacs.json  info.md  pyproject.toml  release-please-config.json  renovate.json  requirements_dev.txt  requirements_test.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  hacs.yml  hassfest.yml  release.yml  security-audit.yml  stale.yml
custom_components/start_time/: __init__.py  boot.py  config_flow.py  const.py  diagnostics.py  icons.json  manifest.json  sensor.py  strings.json
custom_components/start_time/translations/: en.json  fr.json
docs/: configuration.md  installation.md  troubleshooting.md
scripts/: lint  setup  test
tests/: __init__.py  conftest.py  test_boot.py  test_config_flow.py  test_diagnostics.py  test_init.py  test_manifest.py  test_sensor.py
