[project]
name = "start_time"
version = "1.1.8"
description = "Start Time sensor for Home Assistant"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["custom_components"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # comprehensions
    "SIM", # simplify
    "ASYNC", # async checks
    "TC",  # type-checking imports
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=custom_components/start_time --cov-report=term-missing"
asyncio_mode = "auto"
